--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +16,8 @@
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-native": "^0.68.1",
+    "react-native-web": "^0.17.7",
     "react-popper": "^2.2.5",
     "react-redux": "^7.2.6",
     "react-redux-form": "^1.16.8",
